--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
- <a href="index2.html">LInk para index2</a>
-    </body>
+    <h2>Resultou!</h2>
+</body>
 </html>
