--- a/teste/index.html
+++ b/teste/index.html
@@ -39,7 +39,7 @@
 								<li class="active"><a href="index.html">1</a></li>
 								<li><a href="left-sidebar.html">2</a></li>
 								<li><a href="right-sidebar.html">3</a></li>
-								<li><a href="../indexteste.html">Voltar</a></li>
+								<li><a href="../index.html">Voltar</a></li>
 							</ul>
 						</nav>
 					</div>
