--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button aria-label="Close"></button>
           </div>
         </div>
-        <div class="window-body">
+        <div class="window-body" >
           <menu role="tablist">
             <button aria-selected="true" aria-controls="music">Nintendo Entertainment System</button>
             <a href="md.html"><button  aria-controls="dogs">MD</button></a>
@@ -30,19 +30,25 @@
                 <legend>Jogos:</legend>
                 <div class="field-row">
                   <input  id="radio29" type="radio" name="fieldset-example2" value="./teste/supermario.html">
-                  <label for="radio29">Super Mario Bros.</label>
+                  <label for="radio29">Super Mario Bros.  &emsp; </label>
+                  <input  id="radio34" type="radio" name="fieldset-example2" value="./teste/zelda.html">
+                  <label for="radio34">Zelda.</label>
                 </div>
                 <div class="field-row">
-                  <input id="radio30" type="radio" name="fieldset-example2">
-                  <label for="radio30">Bell Towers</label>
+                  <input id="radio30" type="radio" name="fieldset-example2" value="./teste/tetris.html">
+                  <label for="radio30">Tetris</label>
                 </div>
                 <div class="field-row">
-                  <input id="radio31" type="radio" name="fieldset-example2" >
-                  <label for="radio31">The Glamorous Monique</label>
+                  <input id="radio31" type="radio" name="fieldset-example2" value="./teste/megaman.html">
+                  <label for="radio31">Megaman</label>
                 </div>
                 <div class="field-row">
-                  <input id="radio32" type="radio" name="fieldset-example2">
-                  <label for="radio32">EN. V</label>
+                  <input id="radio32" type="radio" name="fieldset-example2" value="./teste/castlevania.html">
+                  <label for="radio32">Castlevania</label>
+                </div>
+                <div class="field-row">
+                  <input id="radio33" type="radio" name="fieldset-example2" value="./teste/finalfantasy.html">
+                  <label for="radio33">Final Fantasy</label>
                 </div>
               </fieldset>
               <section class="field-row">
@@ -62,8 +68,8 @@
             <iframe width="100%" height="200" src="https://www.youtube.com/embed/TODJBQ0tnow" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </article>
           <section class="field-row" style="justify-content: flex-end">
-            <button>OK</button>
-            <button>Cancel</button>
+            <button>Info</button>
+           <a href="https://github.com/njpontes1/testeonline.github.io"><button >GitHub</button></a> 
           </section>
         </div>
       </div>
