--- a/teste/tetris.html
+++ b/teste/tetris.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 <html>
@@ -5,14 +6,29 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Embedding Example</title>
 		
+		<link
+  rel="stylesheet"
+  href="https://unpkg.com/xp.css"
+>
+
+<link rel="stylesheet" href="stylepopup.css">
 		<script type="text/javascript" src="https://unpkg.com/jsnes/dist/jsnes.min.js"></script>
 		<script type="text/javascript" src="nes-embed.js"></script>
-		<script>window.onload = function(){nes_load_url("nes-canvas", "tetris.nes");}</script>
-	</head>
-	<body>
-		<div style="margin: auto; width: 75%;">
-			<canvas id="nes-canvas" width="256" height="240" style="width: 100%"/>
+		<script>window.onload = function(){nes_load_url("nes-canvas", "./roms/tetris.nes");}</script>
+	
+
+		
+		
+	
 		</div>
-		<p>DPad: Arrow keys<br/>Start: Return, Select: Tab<br/>A Button: A, B Button: S</p>
+
+	</head>
+	<body >
+		<div >
+			
+			<canvas  id="nes-canvas" width="256" height="240" style="width: 100%"/>
+		 
+		</div>
+		
 	</body>
 </html>
