--- a/dos.html
+++ b/dos.html
@@ -19,18 +19,18 @@
         </div>
         <div class="window-body" >
           <menu role="tablist">
-           <a href="index.html"> <button aria-selected="true" aria-controls="music">Nintendo Entertainment System</button></a>
+            <a href="index.html"> <button  aria-controls="music">NES</button></a>
             <a href="md.html"><button  aria-controls="dogs">MD</button></a>
-           <a href="dos.html"><button aria-controls="food">DOS</button></a> 
+           <a href="dos.html"><button aria-selected="true" aria-controls="food">Disk Operating System</button></a> 
             <button aria-controls="food">ETC</button>
           </menu>
           <article role="tabpanel" id="music">
-              Controlos:<p><strong>Mover:</strong>  Arrow keys <strong>Botão A:</strong>  A <strong>Botão B:</strong>  S<strong>Start:</strong>  Enter <strong>Select:</strong>  Backspace </p>
+              Controlos:<p><strong>Teclado + Rato</strong></p>
               <fieldset>
                 <legend>Jogos:</legend>
                 <div class="field-row">
-                  <input  id="radio29" type="radio" name="fieldset-example2" value="./teste/supermario.html">
-                  <label for="radio29">Super Mario Bros.  &emsp; </label>
+                  <input  id="radio29" type="radio" name="fieldset-example2" value="./DOS/keen4.html">
+                  <label for="radio29">Commander Keen 4  &emsp; </label>
                   <input  id="radio34" type="radio" name="fieldset-example2" value="./teste/zelda.html">
                   <label for="radio34">Zelda</label>
                 </div>
