--- a/teste/supermario.html
+++ b/teste/supermario.html
@@ -5,11 +5,16 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Embedding Example</title>
-		
-		<link
-  rel="stylesheet"
-  href="https://unpkg.com/xp.css"
->
+		<style>
+			html, body, canvas, .dosbox-container {
+			  width: 100%;
+			  height: 100%;
+			  margin: 0;
+			  padding: 0;
+			  overflow: hidden;
+			}
+		  </style>
+ 
 
 <link rel="stylesheet" href="stylepopup.css">
 		<script type="text/javascript" src="https://unpkg.com/jsnes/dist/jsnes.min.js"></script>
